# scalde

./: .gitignore  .pypirc  BUILD  LICENSE  README.md  pants.toml  pyproject.toml  requirements_dev.txt
.github/workflows/: cicd.yml
.pants.d/run-tracker/pants_run_2023_04_14_23_56_34_371_70c170660f20444eb3136f47ce6251e9/: logs
libs/scalde-cognito-confidential/: BUILD  README.md  pyproject.toml
libs/scalde-cognito-confidential/cognito_confidential/: __init__.py  authentications.py  clients.py  config.py  exceptions.py  models.py  stores.py
libs/scalde-data-factory/: BUILD  README.md  pyproject.toml  requirements.txt
libs/scalde-data-factory/data_factory/: exceptions.py  loader.py  steps.py
libs/scalde-data-factory/tests_data_factory/: test_pipeline.py  test_steps.py
libs/scalde-data-table/: pyproject.toml
libs/scalde-easy-testing/: BUILD  README.md  pyproject.toml
libs/scalde-easy-testing/easy_testing/: builders.py
libs/scalde-easy-testing/tests_easy_testing/: test_builders.py
libs/scalde-easy-testting/: BUILD  pyproject.toml
libs/scalde-easy-testting/easy_testing/: __init__.py  dataframes.py
libs/scalde-easy-testting/tests_easy_testing/: test_dataframes.py
pants-plugins/: BUILD  requirements.txt
pants-plugins/libs_plugin/: register.py
scalde/cognito_confidential/: BUILD  parsers.py  requirements.txt  validations.py
scalde/data_factory/: __init__.py  exporter.py  pipeline.py  validations.py
scalde/easy_testing/: BUILD
scripts/: install-libs.sh  install-pants.sh  update-pythonpaths.sh  validate.sh
tests/data_factory/: BUILD  test_pipeline.py  test_steps.py
tests/easy_testing/: BUILD  test_builders.py  test_dataframes.py
