[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scalde-cognito-confidential"
dynamic = ["version", "dependencies"]
authors = [
    {name = "Thomas Marquis", email = "thomas.marquis.dev@gmail.com"},
]
description = "AWS Cognito client library for confidential clients"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["security", "aws", "cognito", "oicd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {file = "VERSION" }
dependencies = {file = "requirements.txt" }
