[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scalde-data-factory"
dynamic = ["version", "dependencies"]
authors = [
    {name = "Thomas Marquis", email = "thomas.marquis.dev@gmail.com"},
]
description = "Data preparations tools for data science projects"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["datascience", "preprocessing", "data-pipeline", "data-validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {file = "VERSION" }
dependencies = {file = "requirements.txt" }
