[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scalde-data-table"
version = "0.1.0"
authors = [
    {name = "Thomas Marquis", email = "thomas.marquis.dev@gmail.com"},
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.setuptools.packages.find]
where = ["."]